--- a/mastodon-chart/templates/cronjob-accounts-prune.yaml
+++ b/mastodon-chart/templates/cronjob-accounts-prune.yaml
@@ -36,8 +36,8 @@ spec:
                 - name: ES_PASS
                   valueFrom:
                     secretKeyRef:
-                      key: {{ .Values.configuration.search.password.secretRef.key }}
-                      name: {{ .Values.configuration.search.password.secretRef.name }}
+                      key: {{ .Values.configuration.search.password.secretKeyRef.key }}
+                      name: {{ .Values.configuration.search.password.secretKeyRef.name }}
               {{- end }}
               resources:
                 {{- toYaml .Values.jobs.accountsPrune.resources | nindent 16 }}
