--- a/mastodon-chart/templates/cronjob-statuses-remove.yaml
+++ b/mastodon-chart/templates/cronjob-statuses-remove.yaml
@@ -38,8 +38,8 @@ spec:
                 - name: ES_PASS
                   valueFrom:
                     secretKeyRef:
-                      key: {{ .Values.configuration.search.password.secretRef.key }}
-                      name: {{ .Values.configuration.search.password.secretRef.name }}
+                      key: {{ .Values.configuration.search.password.secretKeyRef.key }}
+                      name: {{ .Values.configuration.search.password.secretKeyRef.name }}
               {{- end }}
               resources:
                 {{- toYaml .Values.jobs.statusesRemove.resources | nindent 16 }}
