set keda argocd app to server side apply due to large crds

--- a/argocd/applications/keda.yaml
+++ b/argocd/applications/keda.yaml
@@ -12,6 +12,8 @@ spec:
     automated:
       selfHeal: true
       prune: true
+    syncOptions:
+      - ServerSideApply=true
   source:
     chart: keda
     repoURL: https://kedacore.github.io/charts
