--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -25,6 +25,7 @@ resources:
   - applications/cert-manager.yaml
   - applications/cluster-issuers.yaml
   - applications/elastic-operator.yaml
+  - applications/tootcommunity-search.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
