--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -41,3 +41,11 @@ metadata:
   namespace: esb
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/jtq7udvdfeq3hizmjbrpmxnyuq"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: sidekiq-metrics
+  namespace: sidekiq-metrics
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/7yfnz33zfhizl7acin4va7uxiq"
