--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -260,7 +260,7 @@ ingress:
   ingressClassName: nginx
   host: toot.community
   verifyClient:
-    enabled: true
+    enabled: false
     secretName: tootcommunity/tootcommunity-ca-secret
   tls:
     - hosts:
