update loki datasource to increase query timeout

--- a/monitoring/datasources/loki.yaml
+++ b/monitoring/datasources/loki.yaml
@@ -14,5 +14,6 @@ data:
         url: "http://loki-gateway.loki.svc.cluster.local"
         jsonData:
           httpHeaderName1: 'X-Scope-OrgID'
+          timeout: "900"
         secureJsonData:
           httpHeaderValue1: 'tootcommunity'
