--- a/mastodon-chart/templates/deployment-web-primary-only.yaml
+++ b/mastodon-chart/templates/deployment-web-primary-only.yaml
@@ -34,6 +34,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      priorityClassName: {{ include "mastodon.fullname" . }}-high-priority
       containers:
         - command:
             - bundle
