--- a/mastodon-chart/templates/deployment-web.yaml
+++ b/mastodon-chart/templates/deployment-web.yaml
@@ -31,6 +31,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      priorityClassName: {{ include "mastodon.fullname" . }}-high-priority
       containers:
         - command:
             - bundle
