split the ingress object into two, so tls verify can be enabled on non-streaming endpoints

--- a/mastodon-chart/templates/ingress-web.yaml
+++ b/mastodon-chart/templates/ingress-web.yaml
@@ -16,7 +16,7 @@ metadata:
     {{- end }}
   labels:
     {{- include "mastodon.labels" . | nindent 4 }}
-  name: {{ $fullName }}
+  name: {{ $fullName }}-web
 spec:
   ingressClassName: {{ .Values.ingress.ingressClassName }}
   rules:
