--- a/mastodon-chart/templates/ingress-web.yaml
+++ b/mastodon-chart/templates/ingress-web.yaml
@@ -3,14 +3,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.maxBodySize }}
-    nginx.ingress.kubernetes.io/client-body-buffer-size: {{ .Values.ingress.maxBodySize }}
-    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
-    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
-    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingress.upstreamProxyTimeout | quote }}
+    nginx.ingress.kubernetes.io/proxy-body-size: {{ .Values.ingress.web.maxBodySize }}
+    nginx.ingress.kubernetes.io/client-body-buffer-size: {{ .Values.ingress.web.maxBodySize }}
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: {{ .Values.ingress.web.upstreamProxyTimeout | quote }}
+    nginx.ingress.kubernetes.io/proxy-read-timeout: {{ .Values.ingress.web.upstreamProxyTimeout | quote }}
+    nginx.ingress.kubernetes.io/proxy-send-timeout: {{ .Values.ingress.web.upstreamProxyTimeout | quote }}
     cert-manager.io/cluster-issuer: letsencrypt-prod
-    {{- if .Values.ingress.verifyClient.enabled }}
-    nginx.ingress.kubernetes.io/auth-tls-secret: {{ .Values.ingress.verifyClient.secretName }}
+    {{- if .Values.ingress.web.verifyClient.enabled }}
+    nginx.ingress.kubernetes.io/auth-tls-secret: {{ .Values.ingress.web.verifyClient.secretName }}
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
     {{- end }}
@@ -18,9 +18,9 @@ metadata:
     {{- include "mastodon.labels" . | nindent 4 }}
   name: {{ $fullName }}-web
 spec:
-  ingressClassName: {{ .Values.ingress.ingressClassName }}
+  ingressClassName: {{ .Values.ingress.web.ingressClassName }}
   rules:
-    - host: {{ .Values.ingress.host }}
+    - host: {{ .Values.ingress.web.host }}
       http:
         paths:
           - backend:
@@ -49,4 +49,4 @@ spec:
           {{- end }}
           {{- end }}
   tls:
-    {{ .Values.ingress.tls | toYaml | nindent 4 }}
+    {{ .Values.ingress.web.tls | toYaml | nindent 4 }}
