--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -28,6 +28,7 @@ resources:
   - applications/tootcommunity-search.yaml
   - applications/fluentbit.yaml
   - applications/n8n.yaml
+  - applications/sidekiq-metrics.yaml
 
   # this line below is enabled because toot.community uses 1Password to provision secrets to the Kubernetes cluster,
   # it's fine if you don't, but then remove this line & the corresponding file.
