register the fluentbit / fastly verification under argocd

--- a/argocd/kustomization.yaml
+++ b/argocd/kustomization.yaml
@@ -27,6 +27,7 @@ resources:
   - applications/elastic-operator.yaml
   - applications/tootcommunity-search.yaml
   - applications/fluentbit.yaml
+  - applications/fluentbit-fastly.yaml
   - applications/n8n.yaml
   - applications/sidekiq-metrics.yaml
 
