test with renovate for a wider glob of yaml files

--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,7 @@
     ]
   },
   "kubernetes": {
-    "fileMatch": ["n8n/.+\\.yaml$"]
+    "fileMatch": ["\\.yaml$"]
   },
   "packageRules": [
     {
