--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -66,7 +66,7 @@ configuration:
     opensslVerifyMode: none
     port: 587
     domain: ses.toot.community
-    fromAddress: notifications@ses.toot.community
+    fromAddress: toot.community Notifications <notifications@ses.toot.community>
     smtpServer: email-smtp.eu-west-1.amazonaws.com
   search:
     enabled: true
