--- a/mastodon-chart/templates/deployment-streaming.yaml
+++ b/mastodon-chart/templates/deployment-streaming.yaml
@@ -5,10 +5,11 @@ metadata:
     {{- include "mastodon.labels" . | nindent 4 }}
     app: {{ include "mastodon.fullname" . }}-streaming
     version: {{ .Chart.AppVersion | quote }}
-  {{- if .Values.streaming.annotations }}
-    annotations:
-      {{- toYaml .Values.streaming.annotations | nindent 4 }}
-  {{- end }}
+  annotations:
+    checksum/config: {{ include (print $.Template.BasePath "/configuration.yaml") . | sha256sum }}
+    {{- if .Values.streaming.annotations }}
+    {{- toYaml .Values.streaming.annotations | nindent 4 }}
+    {{- end }}
   name: {{ include "mastodon.fullname" . }}-streaming
 spec:
   selector:
