--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: ghcr.io/mastodon/mastodon
   pullPolicy: IfNotPresent
-  tag: "nightly-2023-07-07-v4.1.4"
+  tag: "nightly-2023-07-22"
 
 imagePullSecrets: [ ]
 nameOverride: ""
