--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -116,7 +116,8 @@ web:
 
 translations:
   enabled: true
-  endpoint: https://translate.universeodon.com
+  deepl:
+    plan: free
 
 streaming:
   replicaCount: 4
