--- a/n8n/configuration.yaml
+++ b/n8n/configuration.yaml
@@ -32,3 +32,4 @@ data:
   N8N_PORT: "5678"
   N8N_PROTOCOL: http
   N8N_LISTEN_ADDRESS: "0.0.0.0"
+  N8N_SKIP_WEBHOOK_DEREGISTRATION_SHUTDOWN: "true"
