test updating to new psql server

--- a/n8n/configuration.yaml
+++ b/n8n/configuration.yaml
@@ -14,9 +14,9 @@ data:
   DB_LOGGING_ENABLED: "true"
   DB_LOGGING_OPTIONS: "error"
   DB_TYPE: "postgresdb"
-  DB_POSTGRESDB_DATABASE: "esb-pool"
-  DB_POSTGRESDB_HOST: "private-db-postgresql-ams3-toot-community-do-user-924064-0.b.db.ondigitalocean.com"
-  DB_POSTGRESDB_PORT: "25061"
+  DB_POSTGRESDB_DATABASE: "esb"
+  DB_POSTGRESDB_HOST: "dbs-toot-community-1.private.toot.community"
+  DB_POSTGRESDB_PORT: "5432"
   DB_POSTGRESDB_SSL_REJECT_UNAUTHORIZED: "true"
   DB_POSTGRESDB_USER: "esb"
   DB_POSTGRESDB_SCHEMA: "public"
