adjust the pgbouncer request values to be more sane

--- a/pgbouncer/deployment.yaml
+++ b/pgbouncer/deployment.yaml
@@ -39,9 +39,10 @@ spec:
               subPath: tootcommunity-pgbouncer.crt
           resources:
             requests:
-              memory: 256Mi
+              cpu: 75m
+              memory: 64Mi
             limits:
-              memory: 512Mi
+              memory: 256Mi
       volumes:
         - name: tootcommunity-pgbouncer-ca-file
           configMap:
