--- a/mastodon-chart/templates/cronjob-backup-database.yaml
+++ b/mastodon-chart/templates/cronjob-backup-database.yaml
@@ -39,10 +39,7 @@ spec:
                       name: {{ include "mastodon.fullname" . }}-secrets-env
                       key: DB_PASS
                 - name: DB_HOST
-                  valueFrom:
-                    configMapKeyRef:
-                      name: {{ include "mastodon.fullname" . }}-env
-                      key: DB_HOST
+                  value: {{ .Values.jobs.psqlBackup.overrideDatabaseInfo.host }}
                 - name: DB_USER
                   valueFrom:
                     secretKeyRef:
