add fastly api token to namespace

--- a/argocd/configuration/1p-secrets.yaml
+++ b/argocd/configuration/1p-secrets.yaml
@@ -49,3 +49,11 @@ metadata:
   namespace: sidekiq-metrics
 spec:
   itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/7yfnz33zfhizl7acin4va7uxiq"
+---
+apiVersion: onepassword.com/v1
+kind: OnePasswordItem
+metadata:
+  name: fastly-api-token
+  namespace: fastly-metrics
+spec:
+  itemPath: "vaults/dhwqy3tub7zdwf2zj6cv4lprlu/items/5blhcgq35bqew3q2b7dgvt6z3q"
