--- a/mastodon-chart/values.yaml
+++ b/mastodon-chart/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: ghcr.io/mastodon/mastodon
   pullPolicy: IfNotPresent
-  tag: "v4.2.0-rc2"
+  tag: "v4.2.0"
 
 imagePullSecrets: [ ]
 nameOverride: ""
