--- a/argocd/applications/kube-prometheus-stack.yaml
+++ b/argocd/applications/kube-prometheus-stack.yaml
@@ -35,6 +35,7 @@ spec:
             ingressClassName: nginx
             annotations:
               cert-manager.io/cluster-issuer: letsencrypt-prod
+              nginx.ingress.kubernetes.io/service-upstream: "true"
             hosts:
               - monitoring.toot.community
             tls:
