--- a/asonix-chart/values.yaml
+++ b/asonix-chart/values.yaml
@@ -36,6 +36,7 @@ ingress:
   className: "nginx"
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/service-upstream: "true"
   hosts:
     - host: relay.toot.community
       paths:
