Add linkerd.io/inject annotation to ingress-nginx.yaml

--- a/argocd/applications/ingress-nginx.yaml
+++ b/argocd/applications/ingress-nginx.yaml
@@ -84,6 +84,7 @@ spec:
                   servicePort: "9090"
             prometheus.io/port: "10254"
             prometheus.io/scrape: "true"
+            linkerd.io/inject: enabled
 
           service:
             type: LoadBalancer
