Update job annotations in job-db-migrate.yaml and disable linkerd injection in values.yaml

--- a/mastodon-chart/templates/job-db-migrate.yaml
+++ b/mastodon-chart/templates/job-db-migrate.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       name: {{ include "mastodon.fullname" . }}-db-migrate
-      {{- with .Values.jobAnnotations }}
+      {{- with .Values.job.annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
